------------------------

NEW FEATURES

    o scan_sequences()/enrich_motifs() can now be used to scan/enrich for
      gapped motifs. A new section has been added to the SequenceSearches.Rmd
      vignette.

    o scan_sequences(..., use.gaps), enrich_motifs(..., use.gaps): ignore motif
      gap information.

    o read_meme(), write_meme(): now fully support custom alphabets.

    o prob_match(): calculate the probability of a motif match.

    o enrich_motifs(), get_matches(), get_scores(), motif_pvalue(),
      motif_score(), scan_sequences(), score_match(): new allow.nonfinite
      parameter, allowing for the functions to work even if non-finite values
      are present in the motif PWM.

    o read_matrix(..., comment): allows for comments to be ignored in motif
      files.

    o write_matrix(..., digits): control the number of digits to use for
      writing motif positions.

    o New mask_seqs() utility function: inject hard masks into sequences.

    o scan_sequences(..., warn.NA), enrich_motifs(..., warn.NA): new option
      which can disable warnings from non-standard letters being detected
      in the input sequences.

    o get_bkg(..., window, window.size, window.overlap): new options for
      calculating sequence background in windows.

    o get_bkg(..., merge.res): new option to return background information for
      individual sequences.

MINOR CHANGES

    o read_matrix(..., positions): added partial argument matching.

    o create_sequences(), shuffle_sequences(), motif_pvalue(): the c++ random
      engine has been changed from std::default_random_engine to std::mt19937.
      This should allow for the same rng.seed value to result in the same
      output regardless of OS.

    o score_match() has been vectorized (alongside new prob_match() function).

    o The ape and ggtree packages are now no longer imported and must be
      installed seperately in order to use motif_tree().
