@@ -44,6 +44,7 @@ export(ppm_to_icm)
 export(ppm_to_pcm)
 export(ppm_to_pwm)
 export(prob_match)
+export(prob_match_bkg)
 export(pwm_to_ppm)
 export(read_cisbp)
 export(read_homer)
